[package]
name = "json_patch"
version = "0.1.0"
authors = ["l1h3r <devin.turner09@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "JavaScript Object Notation (JSON) Patch/Merge Patch"
repository = "https://github.com/l1h3r/json_patch"
keywords = ["json", "json-patch", "json-merge-patch"]
categories = []
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]

# Enables functionality requiring the `std` crate.
std = []
